--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="am.hayber">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,13 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ChatActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity
-            android:name=".FindFriendsActivity"
-            android:parentActivityName=".MainActivity" />
+        <activity android:name=".FindFriendsActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".PhoneLoginActivity" />
-        <activity android:name=".GroupChatActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".GroupChatActivity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".SettingsActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
